--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,53 @@
+html, body{
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+body{
+	font-family: 'Noto Sans TC', sans-serif;
+	background: #e3e3e3;
+}
+
+a{
+	cursor: pointer;
+}
+
+header{
+	position: relative;
+}
+
+#tools {
+	position: absolute;;
+	top: calc(50px + .5rem);
+	left: .5rem;
+}
+
 .node circle {
 	fill: #fff;
 	stroke: steelblue;
 	stroke-width: 3px;
+	cursor: pointer;
 }
 
 .node text {
-	font: 12px sans-serif;
+	font-size: 12px;
+	font-family: sans-serif;
+	cursor: pointer;
+}
+
+.node text.root{
+	font-size: 15px;
 }
 
 .link {
 	fill: none;
 	stroke: #ccc;
 	stroke-width: 2px;
+}
+
+#svg{
+	width: 100%;
+	height: 100%;
 }
